--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,11 @@
+html {
+  overflow: scroll;
+}
 html,
 body,
 .template {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 .landing-splash {
   width: 100%;
