--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -40,11 +40,11 @@ html, body, .template{
   padding-top: 2%;
 }
 
-// -------------------------SEARCH----------------------------
-.search-body {
+.body {
   margin-top: 2%;
 }
 
+// -------------------------SEARCH----------------------------
 .search-profile {
   text-align: center;
 }
