Admin deletion implemented

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,9 +1,13 @@
 html {
-  overflow: scroll;
+  overflow: auto;
 }
 html, body, .template{
   width: 100%;
   height: 100%;
+}
+
+.body {
+  margin-top: 2%;
 }
 
 // -------------------------LANDING----------------------------
@@ -38,10 +42,6 @@ html, body, .template{
 
 .login-social {
   padding-top: 2%;
-}
-
-.body {
-  margin-top: 2%;
 }
 
 // -------------------------SEARCH----------------------------
