--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,14 @@
 html {
-  overflow: scroll;
+  overflow: auto;
 }
 html,
 body,
 .template {
   width: 100%;
   height: 100%;
+}
+.body {
+  margin-top: 2%;
 }
 .landing-splash {
   width: 100%;
@@ -33,9 +36,6 @@ body,
 }
 .login-social {
   padding-top: 2%;
-}
-.body {
-  margin-top: 2%;
 }
 .search-profile {
   text-align: center;
