--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -10,6 +10,11 @@ html, body, .template{
   margin-top: 5%;
 }
 
+.nav-profile {
+  padding-top: 20%;
+  margin-top: 20px;
+}
+
 // -------------------------LANDING----------------------------
 .landing-splash {
   width: 100%;
